[project]
name = "reinforcement-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Hendra Danu Laksana",email = "hdl.project.co@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium (>=1.1.1,<2.0.0)",
    "swig (>=4.3.0,<5.0.0)",
    "box2d (>=2.3.10,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "copier (>=9.6.0,<10.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
